Remove unnecessary JVM option